Correcting alignment

--- a/style.css
+++ b/style.css
@@ -19,40 +19,31 @@ footer {
 }
 
 .col-md-3 {
-  flex: 0 0 300px;
-  position: fixed;
-  height: 100%;
-  overflow-y: auto;
-  padding-top: 20px;
-  box-shadow: var(--box-shadow);
-  background-color: var(--secondary-color);
-  z-index: 1;
+  width: 100%;
 }
 
 .header {
   width: 100%;
+  box-shadow: var(--box-shadow);
+  background-color: var(--secondary-color);
 }
 
 .content {
   flex-grow: 1;
-  margin-left: 300px;
-  padding-left: 20px;
+  padding-left: 320px;
 }
 
-@media (max-width: 767px) {
-  .container {
-    flex-direction: column;
-  }
-
+@media (min-width: 768px) {
   .col-md-3 {
-    width: 100%;
-    flex: 0 0 auto;
-    position: relative;
-    z-index: 0;
+    width: 300px;
+    position: fixed;
+    height: 100%;
+    overflow-y: auto;
+    padding-top: 20px;
   }
 
   .content {
-    margin-left: 0;
+    padding-left: 320px;
   }
 }
 
